# FLARE26-MedGemma

./: .gitignore  README.md  SKILL.md  pyproject.toml
jobs/: evaluate_base_medgemma.sh  evaluate_base_medgemma1.sh  evaluate_medgemma.sh  evaluate_medgemma1.sh  finetune_medgemma.sh  finetune_medgemma1.sh  infer_base_medgemma.sh  infer_base_medgemma1.sh  infer_medgemma.sh  infer_medgemma1.sh  preprocess_flare.sh  smoke_test_resources.sh
medgemma15_validation_inference/: predictions.json
medgemma1_validation_inference/: predictions.json
mle/: __entry__.py  __init__.py  interfaces.py  sanity.py  vars.py
mle/engine/: __init__.py  check_dataset.py  evaluate.py  infer.py  preprocess.py  train.py
scripts/: plot_model_performance.py
