[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mle"
version = "0.0.1"
description = "Machine Learning Engineer"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tianhao Fu", email = "terry.fu@projectneura.org" }
]
dependencies = ["rich", "erbium @ git+https://github.com/ProjectNeura/Erbium"]

[tool.hatch.build.targets.sdist]
only-include = ["mle"]

[tool.hatch.build.targets.wheel]
packages = ["mle"]

[project.urls]
Homepage = "https://github.com/ProjectNeura/MLE"
Documentation = "https://github.com/ProjectNeura/MLE"
Repository = "https://github.com/ProjectNeura/MLE"

[project.scripts]
mle = "mle:__entry__"