[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medgemma-flare-2d"
version = "0.0.1"
description = "MedGemma Baselines on the FLARE-MLLM-2D Dataset"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tianhao Fu", email = "terry.fu@projectneura.org" }
]
dependencies = [
    "rich",
    "erbium @ git+https://github.com/ProjectNeura/Erbium.git",
    "accelerate",
    "bitsandbytes",
    "datasets",
    "peft",
    "pillow",
    "sentencepiece",
    "torch",
    "transformers",
    "trl",
    "wandb",
    "green_score @ git+https://github.com/ATATC/GREEN.git",
    "crimson-score",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["mle"]

[tool.hatch.build.targets.wheel]
packages = ["mle"]

[project.urls]
Homepage = "https://github.com/ATATC/MedGemma-FLARE-2D"
Documentation = "https://github.com/ATATC/MedGemma-FLARE-2D"
Repository = "https://github.com/ATATC/MedGemma-FLARE-2D"

[project.scripts]
mle = "mle:__entry__"
